--- a/views/partials/home.pug
+++ b/views/partials/home.pug
@@ -9,3 +9,4 @@ div.panel.text-center
             a.input-group-btn(ng-href='/search/{{ searchQuery }}')
               button.btn.btn-primary(type='submit' ng-click='searchChannels()') Go!
       div.xs-hidden.col-sm-3
+      div.col-xs-12 or take my #[a(href='/channel/UCRijo3ddMTht_IHyNSNXpNQ') recommendation]
