--- a/views/partials/channel.pug
+++ b/views/partials/channel.pug
@@ -58,10 +58,10 @@ div.panel.channel-container
           div.btn-group.btn-group-sm
             button.btn.btn-default(type='button' title='Play from Beginning' ng-click='loadVideo(timeline.items, 0, timeline.id)')
               i.fa.fa-play
-            button.btn.btn-default(type='button' title='Reverse Order')
+            button.btn.btn-default(type='button' title='Reverse Order' ng-click='reverseTimeline()')
               i.fa.fa-exchange
         div.col-xs-12.playlist-videos
-          a.playlist-video(ng-repeat='item in timeline.items | orderBy:"snippet.publishedAt"' ng-attr-title='{{item.snippet.title}}' ng-class='{"playlist-video-active": item.snippet.resourceId.videoId == activeVideo.id, "live-playlist-video-active": item.snippet.resourceId.videoId == activeVideo.id && selectedPlaylist.id == timeline.id}' ng-click='loadVideo(timeline.items, $index, timeline.id)' href='#')
+          a.playlist-video(ng-repeat='item in timeline.items | orderBy:"snippet.publishedAt":reverseTimelineOrder' ng-attr-title='{{item.snippet.title}}' ng-class='{"playlist-video-active": item.snippet.resourceId.videoId == activeVideo.id, "live-playlist-video-active": item.snippet.resourceId.videoId == activeVideo.id && selectedPlaylist.id == timeline.id}' ng-click='loadVideo(timeline.items, $index, timeline.id)' href='#')
             div
               div.video-thumbnail(ng-attr-style='background-image: url("{{ item.snippet.thumbnails.medium.url }}");')
               div.video-name(ng-bind='item.snippet.title') Video Title
